указал в стат проверке dll ссылаться на dynamicLib.dll

--- a/lab2/checkDynamicStatic/checkDynamicStatic.vcxproj
+++ b/lab2/checkDynamicStatic/checkDynamicStatic.vcxproj
@@ -89,6 +89,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConsoleApplication2\ConsoleApplication2.vcxproj">
+      <Project>{c6d12ef1-ad3f-496e-b3a0-5363ed628d48}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
