--- a/Lab4/MailBox/MailBox.vcxproj
+++ b/Lab4/MailBox/MailBox.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClInclude Include="MailBox.h" />
     <ClInclude Include="Message.h" />
+    <ClInclude Include="MyMain.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -88,6 +89,7 @@
     <ClCompile Include="MailBox.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Message.cpp" />
+    <ClCompile Include="MyMain.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
