--- a/Lab4/MailBox/MailBox.vcxproj.filters
+++ b/Lab4/MailBox/MailBox.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Message.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MyMain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MyMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
