--- a/Lab4/MailBox/MailBox.vcxproj.filters
+++ b/Lab4/MailBox/MailBox.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="MyMain.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CRC.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MyMain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CRC.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
