--- a/lab6/lab6/lab6.vcxproj
+++ b/lab6/lab6/lab6.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="List.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Methods.cpp" />
     <ClCompile Include="stdafx.cpp">
