--- a/lab6/lab6/lab6.vcxproj.filters
+++ b/lab6/lab6/lab6.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="Methods.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="List.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
