--- a/lab6/lab6/lab6.vcxproj.filters
+++ b/lab6/lab6/lab6.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="List.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LRU.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="List.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LRU.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
