--- a/lab9/Main/Main.vcxproj.filters
+++ b/lab9/Main/Main.vcxproj.filters
@@ -32,7 +32,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="Main_Cons_Prod.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="..\Consumer\ConcurrentQueue.cpp">
