--- a/lab9/Laba9_OS/Laba9_OS.vcxproj.filters
+++ b/lab9/Laba9_OS/Laba9_OS.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TheThreadFunc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Laba9_OS.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TheThreadFunc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
