--- a/lab10/Laba10_OS(1)Critical_Section/Laba10_OS(1)Critical_Section.vcxproj.filters
+++ b/lab10/Laba10_OS(1)Critical_Section/Laba10_OS(1)Critical_Section.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Laba10_OS(1)Critical_Section.cpp">
+    <ClCompile Include="ReadWrite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
